--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	
-<div class="header"><h1 class="left">Yet Another Test for the Students - This Time the Topic is Art</h1><h1 class="right">P.S Great Job Today Guys You're Understanding Quickly!</h1></div>
+<div class="header"><h1 class="left">Yet Another Test for the Students - This Time the Topic is Art</h1><h1 class="right">P.S Great Job Today Guys I Know Today Was Tougher But You'll Get It!</h1></div>
 
 <div class="hero"><h1 class="heroh1">Fluidity is a Virtue</h1></div>
 
