Placeholder fix + logic fix

--- a/Front-end-Projects/clock_converter/clock_converter.html
+++ b/Front-end-Projects/clock_converter/clock_converter.html
@@ -21,7 +21,7 @@
             
             <div id = "CTA">
                 <!--Get input-->
-                <input id = "main_input" value = "hh:mm:ssAM or hh:mm:ssPM"><button id = "converter" >Convert Time</button>
+                <input id = "main_input" placeholder = "hh:mm:ssAM or hh:mm:ssPM"><button id = "converter" >Convert Time</button>
             </div>
 
             <!--result-->
